--- a/MetroAttractions/Base.lproj/Main.storyboard
+++ b/MetroAttractions/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="-8" width="600" height="608"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="214" id="cGn-12-bs5">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="input" rowHeight="214" id="cGn-12-bs5" customClass="InputController">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cGn-12-bs5" id="BWR-La-VB1">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -50,23 +50,12 @@
                                                                 </mask>
                                                             </variation>
                                                         </label>
-                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-m9-hgI">
-                                                            <rect key="frame" x="-25" y="-15" width="51" height="31"/>
-                                                        </switch>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I have a Bike" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsy-Qu-LgS">
                                                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-dt-0Nl">
-                                                            <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits"/>
-                                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                                <rect key="frame" x="25" y="83" width="319" height="30"/>
-                                                            </variation>
-                                                        </textField>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhz-H4-dwL">
                                                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                             <color key="backgroundColor" red="1" green="0.1365639485" blue="0.1589871414" alpha="1" colorSpace="calibratedRGB"/>
@@ -74,7 +63,24 @@
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                             </state>
+                                                            <connections>
+                                                                <action selector="goButtonPressed:" destination="cGn-12-bs5" eventType="touchUpInside" id="PN7-8J-zxx"/>
+                                                            </connections>
                                                         </button>
+                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-dt-0Nl">
+                                                            <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                            <variation key="widthClass=compact" fixedFrame="YES">
+                                                                <rect key="frame" x="25" y="83" width="319" height="30"/>
+                                                            </variation>
+                                                        </textField>
+                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-m9-hgI">
+                                                            <rect key="frame" x="-25" y="-15" width="51" height="31"/>
+                                                            <connections>
+                                                                <action selector="switchChanged:" destination="cGn-12-bs5" eventType="valueChanged" id="0sH-oa-b0s"/>
+                                                            </connections>
+                                                        </switch>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.37454144540000001" green="1" blue="0.56867237000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
@@ -100,10 +106,10 @@
                                                     <variation key="default">
                                                         <mask key="subviews">
                                                             <exclude reference="SXy-Zw-M4F"/>
-                                                            <exclude reference="Z3m-m9-hgI"/>
                                                             <exclude reference="Hsy-Qu-LgS"/>
-                                                            <exclude reference="bx2-dt-0Nl"/>
                                                             <exclude reference="Rhz-H4-dwL"/>
+                                                            <exclude reference="bx2-dt-0Nl"/>
+                                                            <exclude reference="Z3m-m9-hgI"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <exclude reference="MI2-fA-K2N"/>
@@ -121,10 +127,10 @@
                                                     <variation key="widthClass=compact">
                                                         <mask key="subviews">
                                                             <include reference="SXy-Zw-M4F"/>
-                                                            <include reference="Z3m-m9-hgI"/>
                                                             <include reference="Hsy-Qu-LgS"/>
-                                                            <include reference="bx2-dt-0Nl"/>
                                                             <include reference="Rhz-H4-dwL"/>
+                                                            <include reference="bx2-dt-0Nl"/>
+                                                            <include reference="Z3m-m9-hgI"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <include reference="MI2-fA-K2N"/>
@@ -174,6 +180,10 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="destinationField" destination="bx2-dt-0Nl" id="bci-E8-2mF"/>
+                                            <outlet property="locationLabel" destination="HNr-F3-8AB" id="sJN-ph-0Nw"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
