--- a/MetroAttractions/Base.lproj/Main.storyboard
+++ b/MetroAttractions/Base.lproj/Main.storyboard
@@ -50,6 +50,12 @@
                                                                 </mask>
                                                             </variation>
                                                         </label>
+                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-m9-hgI">
+                                                            <rect key="frame" x="-25" y="-15" width="51" height="31"/>
+                                                            <connections>
+                                                                <action selector="switchChanged:" destination="cGn-12-bs5" eventType="valueChanged" id="0sH-oa-b0s"/>
+                                                            </connections>
+                                                        </switch>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I have a Bike" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsy-Qu-LgS">
                                                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -72,15 +78,9 @@
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits"/>
                                                             <variation key="widthClass=compact" fixedFrame="YES">
-                                                                <rect key="frame" x="25" y="83" width="319" height="30"/>
+                                                                <rect key="frame" x="14" y="83" width="319" height="30"/>
                                                             </variation>
                                                         </textField>
-                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-m9-hgI">
-                                                            <rect key="frame" x="-25" y="-15" width="51" height="31"/>
-                                                            <connections>
-                                                                <action selector="switchChanged:" destination="cGn-12-bs5" eventType="valueChanged" id="0sH-oa-b0s"/>
-                                                            </connections>
-                                                        </switch>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.37454144540000001" green="1" blue="0.56867237000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
@@ -106,10 +106,10 @@
                                                     <variation key="default">
                                                         <mask key="subviews">
                                                             <exclude reference="SXy-Zw-M4F"/>
+                                                            <exclude reference="Z3m-m9-hgI"/>
                                                             <exclude reference="Hsy-Qu-LgS"/>
                                                             <exclude reference="Rhz-H4-dwL"/>
                                                             <exclude reference="bx2-dt-0Nl"/>
-                                                            <exclude reference="Z3m-m9-hgI"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <exclude reference="MI2-fA-K2N"/>
@@ -127,10 +127,10 @@
                                                     <variation key="widthClass=compact">
                                                         <mask key="subviews">
                                                             <include reference="SXy-Zw-M4F"/>
+                                                            <include reference="Z3m-m9-hgI"/>
                                                             <include reference="Hsy-Qu-LgS"/>
                                                             <include reference="Rhz-H4-dwL"/>
                                                             <include reference="bx2-dt-0Nl"/>
-                                                            <include reference="Z3m-m9-hgI"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <include reference="MI2-fA-K2N"/>
@@ -181,8 +181,8 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="currentLocationLabel" destination="SXy-Zw-M4F" id="wtU-Kg-c4u"/>
                                             <outlet property="destinationField" destination="bx2-dt-0Nl" id="bci-E8-2mF"/>
-                                            <outlet property="locationLabel" destination="HNr-F3-8AB" id="sJN-ph-0Nw"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -201,6 +201,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zsH-0L-2Dr"/>
+                    <connections>
+                        <outlet property="tableView" destination="NU3-6S-nrP" id="nMd-FK-ZNl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
