--- a/MetroAttractions/Base.lproj/Main.storyboard
+++ b/MetroAttractions/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-dt-0Nl">
                                                             <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits"/>
+                                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                         </textField>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.37454144540000001" green="1" blue="0.56867237000000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -211,11 +211,71 @@
                     <navigationItem key="navigationItem" id="zsH-0L-2Dr"/>
                     <connections>
                         <outlet property="tableView" destination="NU3-6S-nrP" id="nMd-FK-ZNl"/>
+                        <segue destination="uO1-gh-c6p" kind="show" id="pkj-ql-TIw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1326" y="436"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wYJ-ks-Utv">
+            <objects>
+                <viewController id="uO1-gh-c6p" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9cN-MX-0fA"/>
+                        <viewControllerLayoutGuide type="bottom" id="NTL-6o-TJJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="psJ-xj-3Bi">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="155" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="alL-J1-oe9">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="155" id="VC0-O0-7fg">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VC0-O0-7fg" id="p9b-0O-FAr">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="alL-J1-oe9" secondAttribute="trailing" constant="-16" id="E5d-yF-s3h"/>
+                            <constraint firstItem="NTL-6o-TJJ" firstAttribute="top" secondItem="alL-J1-oe9" secondAttribute="bottom" id="Gzv-8p-2N1"/>
+                            <constraint firstItem="alL-J1-oe9" firstAttribute="top" secondItem="psJ-xj-3Bi" secondAttribute="topMargin" id="ZlG-Ok-CKw"/>
+                            <constraint firstItem="alL-J1-oe9" firstAttribute="leading" secondItem="psJ-xj-3Bi" secondAttribute="leadingMargin" constant="-16" id="tDa-oO-gCy"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="alL-J1-oe9"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="E5d-yF-s3h"/>
+                                <exclude reference="ZlG-Ok-CKw"/>
+                                <exclude reference="tDa-oO-gCy"/>
+                                <exclude reference="Gzv-8p-2N1"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="alL-J1-oe9"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="E5d-yF-s3h"/>
+                                <include reference="ZlG-Ok-CKw"/>
+                                <include reference="tDa-oO-gCy"/>
+                                <include reference="Gzv-8p-2N1"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F4N-P6-Jz3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2025" y="436"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="h1K-jM-huV">
