Added Search Cell

--- a/MetroAttractions/Base.lproj/Main.storyboard
+++ b/MetroAttractions/Base.lproj/Main.storyboard
@@ -51,19 +51,12 @@
                                                                 </mask>
                                                             </variation>
                                                         </label>
-                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-m9-hgI">
-                                                            <rect key="frame" x="-25" y="-15" width="51" height="31"/>
-                                                            <connections>
-                                                                <action selector="switchChanged:" destination="cGn-12-bs5" eventType="valueChanged" id="0sH-oa-b0s"/>
-                                                            </connections>
-                                                        </switch>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I have a Bike" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsy-Qu-LgS">
-                                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhz-H4-dwL">
+                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-dt-0Nl">
+                                                            <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                        </textField>
+                                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhz-H4-dwL">
                                                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                             <color key="backgroundColor" red="1" green="0.1365639485" blue="0.1589871414" alpha="1" colorSpace="calibratedRGB"/>
                                                             <state key="normal" title="Go">
@@ -74,82 +67,62 @@
                                                                 <action selector="goButtonPressed:" destination="cGn-12-bs5" eventType="touchUpInside" id="PN7-8J-zxx"/>
                                                             </connections>
                                                         </button>
-                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-dt-0Nl">
-                                                            <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                                        </textField>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.37454144540000001" green="1" blue="0.56867237000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="bx2-dt-0Nl" firstAttribute="top" secondItem="SXy-Zw-M4F" secondAttribute="bottom" constant="27" id="Eid-Yk-n9s"/>
                                                         <constraint firstItem="bx2-dt-0Nl" firstAttribute="leading" secondItem="HNr-F3-8AB" secondAttribute="leading" constant="25" id="J15-QJ-39v"/>
                                                         <constraint firstItem="SXy-Zw-M4F" firstAttribute="top" secondItem="HNr-F3-8AB" secondAttribute="top" constant="18" id="MI2-fA-K2N">
-                                                            <variation key="widthClass=compact" constant="19"/>
+                                                            <variation key="widthClass=compact" constant="20"/>
                                                         </constraint>
-                                                        <constraint firstAttribute="bottom" secondItem="Hsy-Qu-LgS" secondAttribute="bottom" constant="12" id="Pnh-oN-ato"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Rhz-H4-dwL" secondAttribute="trailing" constant="33" id="RBc-8f-9Ce"/>
                                                         <constraint firstAttribute="trailing" secondItem="SXy-Zw-M4F" secondAttribute="trailing" constant="74" id="W3R-6X-K5f"/>
                                                         <constraint firstItem="SXy-Zw-M4F" firstAttribute="leading" secondItem="HNr-F3-8AB" secondAttribute="leading" constant="52" id="YbH-H1-Ymk"/>
                                                         <constraint firstAttribute="trailing" secondItem="bx2-dt-0Nl" secondAttribute="trailing" constant="25" id="bFB-yC-mwx"/>
                                                         <constraint firstItem="Rhz-H4-dwL" firstAttribute="leading" secondItem="HNr-F3-8AB" secondAttribute="leading" constant="34" id="bqV-kl-G1I">
-                                                            <variation key="widthClass=compact" constant="33"/>
+                                                            <variation key="widthClass=compact" constant="25"/>
                                                         </constraint>
                                                         <constraint firstAttribute="bottom" secondItem="Rhz-H4-dwL" secondAttribute="bottom" constant="6" id="cfx-SE-FEO">
-                                                            <variation key="widthClass=compact" constant="8"/>
+                                                            <variation key="widthClass=compact" constant="14"/>
                                                         </constraint>
-                                                        <constraint firstAttribute="trailing" secondItem="Z3m-m9-hgI" secondAttribute="trailing" constant="17" id="fY8-Mz-zw1"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Z3m-m9-hgI" secondAttribute="bottom" constant="7" id="kw8-0d-0NT"/>
-                                                        <constraint firstItem="Z3m-m9-hgI" firstAttribute="leading" secondItem="Hsy-Qu-LgS" secondAttribute="trailing" constant="20" id="qpQ-zC-t0G"/>
-                                                        <constraint firstItem="Hsy-Qu-LgS" firstAttribute="leading" secondItem="Rhz-H4-dwL" secondAttribute="trailing" constant="45" id="stD-fa-Djs">
-                                                            <variation key="widthClass=compact" constant="46"/>
-                                                        </constraint>
+                                                        <constraint firstItem="Rhz-H4-dwL" firstAttribute="top" secondItem="bx2-dt-0Nl" secondAttribute="bottom" constant="23" id="jbH-Cy-3gH"/>
                                                     </constraints>
                                                     <variation key="default">
                                                         <mask key="subviews">
                                                             <exclude reference="SXy-Zw-M4F"/>
-                                                            <exclude reference="Z3m-m9-hgI"/>
-                                                            <exclude reference="Hsy-Qu-LgS"/>
-                                                            <exclude reference="Rhz-H4-dwL"/>
                                                             <exclude reference="bx2-dt-0Nl"/>
+                                                            <exclude reference="Rhz-H4-dwL"/>
                                                         </mask>
                                                         <mask key="constraints">
-                                                            <exclude reference="Pnh-oN-ato"/>
-                                                            <exclude reference="stD-fa-Djs"/>
                                                             <exclude reference="MI2-fA-K2N"/>
                                                             <exclude reference="W3R-6X-K5f"/>
                                                             <exclude reference="YbH-H1-Ymk"/>
                                                             <exclude reference="Eid-Yk-n9s"/>
                                                             <exclude reference="J15-QJ-39v"/>
                                                             <exclude reference="bFB-yC-mwx"/>
+                                                            <exclude reference="RBc-8f-9Ce"/>
                                                             <exclude reference="bqV-kl-G1I"/>
                                                             <exclude reference="cfx-SE-FEO"/>
-                                                            <exclude reference="fY8-Mz-zw1"/>
-                                                            <exclude reference="kw8-0d-0NT"/>
-                                                            <exclude reference="qpQ-zC-t0G"/>
+                                                            <exclude reference="jbH-Cy-3gH"/>
                                                         </mask>
                                                     </variation>
                                                     <variation key="widthClass=compact">
                                                         <mask key="subviews">
                                                             <include reference="SXy-Zw-M4F"/>
-                                                            <include reference="Z3m-m9-hgI"/>
-                                                            <include reference="Hsy-Qu-LgS"/>
-                                                            <include reference="Rhz-H4-dwL"/>
                                                             <include reference="bx2-dt-0Nl"/>
+                                                            <include reference="Rhz-H4-dwL"/>
                                                         </mask>
                                                         <mask key="constraints">
-                                                            <include reference="Pnh-oN-ato"/>
-                                                            <include reference="stD-fa-Djs"/>
                                                             <include reference="MI2-fA-K2N"/>
                                                             <include reference="W3R-6X-K5f"/>
                                                             <include reference="YbH-H1-Ymk"/>
                                                             <include reference="Eid-Yk-n9s"/>
                                                             <include reference="J15-QJ-39v"/>
                                                             <include reference="bFB-yC-mwx"/>
+                                                            <include reference="RBc-8f-9Ce"/>
                                                             <include reference="bqV-kl-G1I"/>
                                                             <include reference="cfx-SE-FEO"/>
-                                                            <include reference="fY8-Mz-zw1"/>
-                                                            <include reference="kw8-0d-0NT"/>
-                                                            <include reference="qpQ-zC-t0G"/>
+                                                            <include reference="jbH-Cy-3gH"/>
                                                         </mask>
                                                     </variation>
                                                 </view>
@@ -161,7 +134,7 @@
                                                 </constraint>
                                                 <constraint firstAttribute="trailingMargin" secondItem="HNr-F3-8AB" secondAttribute="trailing" constant="7" id="L8C-PJ-U68"/>
                                                 <constraint firstItem="HNr-F3-8AB" firstAttribute="top" secondItem="BWR-La-VB1" secondAttribute="topMargin" constant="8" id="RJs-pT-USL">
-                                                    <variation key="widthClass=compact" constant="9"/>
+                                                    <variation key="widthClass=compact" constant="10"/>
                                                 </constraint>
                                             </constraints>
                                             <variation key="default">
@@ -187,8 +160,8 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.91177398990000003" green="0.91177398990000003" blue="0.91177398990000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
-                                            <outlet property="bikeSwitch" destination="Z3m-m9-hgI" id="8Lh-cy-XBZ"/>
                                             <outlet property="currentLocationLabel" destination="SXy-Zw-M4F" id="wtU-Kg-c4u"/>
                                             <outlet property="destinationField" destination="bx2-dt-0Nl" id="bci-E8-2mF"/>
                                         </connections>
@@ -216,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1326" y="436"/>
+            <point key="canvasLocation" x="1326" y="434"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="wYJ-ks-Utv">
@@ -230,11 +203,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="155" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="alL-J1-oe9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="184" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="alL-J1-oe9">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="155" id="VC0-O0-7fg">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="184" id="VC0-O0-7fg">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VC0-O0-7fg" id="p9b-0O-FAr">
                                             <autoresizingMask key="autoresizingMask"/>
